syntax = "proto3";
package service;
option go_package = "grpc-example/proto/service";

service ExampleService {
  rpc GetUser(UserRequest) returns (UserResponse) {}
  rpc GetPriceUpdates(PriceRequest) returns (stream PriceResponse) {}
  rpc UploadFile(stream FileChunk) returns (UploadStatus) {}
  rpc Chat(stream ChatMessage) returns (stream ChatMessage) {}
}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
}

message PriceRequest {
  string symbol = 1;
}

message PriceResponse {
  string symbol = 1;
  double price = 2;
  string timestamp = 3;
}

message FileChunk {
  bytes content = 1;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message ChatMessage {
  string user_id = 1;
  string content = 2;
  string timestamp = 3;
}